[package]
name = "dot-dot-slash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
actix-web-lab = "0.19.1"
qstring = "0.7.2"
serde = { version = "1.0.156", features = ["derive"] }
